<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrazioneActivity"
    android:id="@+id/constraintRegistrazioneLayout">


    <!-- La pagina di registrazione deve avere la scroll view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="26dp"
            android:id="@+id/mainLinearLayout">

            <!-- Titolo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registrazione_title"
                android:textColor="@color/black"
                android:textSize="36dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>

            <!-- Label user -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textColor="@color/black"
                android:textSize="26dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Field user -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Label password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textColor="@color/black"
                android:textSize="26dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Field password -->
            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"/>

            <!-- Label conferma password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_conferma_password"
                android:textColor="@color/black"
                android:textSize="26dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Field conferma password -->
            <EditText android:id="@+id/conferma_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Label città di provenienza-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_citta_di_provenienza"
                android:textColor="@color/black"
                android:textSize="26dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Field città di provenienza-->
            <EditText android:id="@+id/citta_di_provenienza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_citta_di_provenienza"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Label data di nascita-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data_di_nascita"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <!-- Field data di nascita-->
            <EditText
                android:id="@+id/data_di_nascita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/prompt_data_di_nascita"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="46dp"/>

            <!-- Bottone registrati -->
            <Button
                android:id="@+id/btn_registrati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/btn_green"
                android:text="@string/btn_registrazione"
                android:padding="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:layout_margin="12dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

