<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificaPasswordActivity"
    android:id="@+id/constraint_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="26dp">

        <!-- Titolo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modifica_password_title"
            android:textColor="@color/black"
            android:textSize="36dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!-- User field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label user -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="56dp">

                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifica_password_label_username"
                    android:textColor="@color/black"
                    android:textSize="26dp"/>

            </LinearLayout>

            <!-- Value user -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Value -->
                <TextView android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Marco"
                    android:textColor="@color/black"
                    android:textSize="26dp"/>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="26dp"/>

        <!-- Password field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <!-- Password data -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="61dp">


                <!-- Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifica_password_label_password"
                    android:textColor="@color/black"
                    android:textSize="26dp"/>

            </LinearLayout>

            <!-- Value password -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Value -->
                <TextView android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="password"
                    android:textColor="@color/black"
                    android:textSize="26dp"/>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="26dp"/>

        <!-- Label nuova password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nuova_password"
            android:textColor="@color/black"
            android:textSize="26dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>

        <!-- Field nuova password -->
        <EditText android:id="@+id/nuova_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>

        <!-- Label conferma password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_conferma_password"
            android:textColor="@color/black"
            android:textSize="26dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>

        <!-- Field conferma password -->
        <EditText android:id="@+id/conferma_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="46dp"/>

        <!-- Bottone Aggiorna password -->

        <Button
            android:id="@+id/btn_aggiorna_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_green"
            android:text="@string/btn_aggiorna_password"
            android:layout_gravity="center"
            android:textSize="26dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_margin="12dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <!-- Bottone Home -->

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_home"
            android:text="@string/btn_home"
            android:layout_gravity="center"
            android:textSize="26dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_margin="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>