<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="26dp">

            <!-- Titolo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_title"
                android:textColor="@color/black"
                android:textSize="36dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp"/>

            <!-- Welcome text -->
            <TextView android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Benvenuto xxx!"
                android:textColor="@color/black"
                android:textSize="26dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>

            <!-- Home section dati -->

            <!-- admin logo -->
            <LinearLayout android:id="@+id/text_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="right"
                android:padding="3dp"
                android:background="@color/teal_200"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/adminImageView"
                    android:layout_width="25dp"
                    android:gravity="right"
                    android:layout_height="fill_parent"
                    android:src="@drawable/icon_admin"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:textColor="@color/black"
                    android:text="@string/home_admin_label"/>



            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>

            <!-- title section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- title section-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/home_label_section_dati"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />



            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>


            <!-- User field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Label user -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="56dp">


                    <!-- Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/home_label_username"
                        android:textColor="@color/black"
                        android:textSize="26dp" />

                </LinearLayout>

                <!-- Value user -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Value -->
                    <TextView
                        android:id="@+id/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Username"
                        android:textColor="@color/black"
                        android:textSize="26dp" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>

            <!-- Password field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Password data -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="61dp">


                    <!-- Label -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_label_password"
                        android:textColor="@color/black"
                        android:textSize="26dp"/>

                </LinearLayout>

                <!-- Value password -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Value -->
                    <TextView android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="password"
                        android:textColor="@color/black"
                        android:textSize="26dp"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>

            <!-- Città field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Città data -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="122dp">


                    <!-- Label città -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_label_citta_di_provenienza"
                        android:textColor="@color/black"
                        android:textSize="26dp"/>

                </LinearLayout>

                <!-- Value città -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Value -->
                    <TextView android:id="@+id/citta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quartu S.Elena"
                        android:textColor="@color/black"
                        android:textSize="26dp"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"/>



            <!-- Data nascita field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Data nascita data -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="6dp">


                    <!-- Label data nascita -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_label_data_nascita"
                        android:textColor="@color/black"
                        android:textSize="26dp"/>

                </LinearLayout>

                <!-- Value città -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Value data nascita -->
                    <TextView android:id="@+id/data_nascita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="02/01/2020"
                        android:textColor="@color/black"
                        android:textSize="26dp"/>

                </LinearLayout>

            </LinearLayout>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>

            <!-- Bottone gestisci utenti -->

            <Button android:id="@+id/btn_gestisci_utenti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_green"
                android:text="@string/home_btn_gestisci_utenti"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:visibility="gone"
                android:padding="10dp"
                android:textSize="26dp"
                android:textColor="@color/white"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"/>

            <!-- Bottone logout -->

            <Button android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_green"
                android:text="@string/home_btn_logout"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textSize="26dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"/>


            <Button android:id="@+id/btn_modifica_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_modifica_password"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:textAllCaps="false"
                android:textSize="16dp"
                android:textColor="@color/color_hyperlink"/>

        </LinearLayout>





    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>